--- a/example.html
+++ b/example.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Upload 5</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script src="main.file_uploader_html5.js"></script>
+	<script src="upload5.js"></script>
 </head>
 <body>
 <div id="dropzone" style="width:100%; height: 500px; border: 1px solid #adff2f;">
